# AdventureWork-ERP-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
migrations/: V1__initial_schema.sql
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routes/: __init__.py  users.py
src/application/: __init__.py
src/application/dtos/: __init__.py  user_dto.py
src/application/services/: __init__.py  user_service.py
src/domain/: __init__.py  exceptions.py
src/domain/entities/: __init__.py  user.py
src/domain/repositories/: __init__.py  user_repository.py
src/infrastructure/: __init__.py  config.py
src/infrastructure/database/: __init__.py  connection.py  models.py
src/infrastructure/logging/: __init__.py  logger.py
src/infrastructure/repositories/: __init__.py  user_repository.py
tests/: test_placeholder.py
